Fix navbar menu position on mobile

--- a/source/stylesheets/components/_navbar.scss
+++ b/source/stylesheets/components/_navbar.scss
@@ -21,7 +21,7 @@
     width: auto;
     height: auto;
     padding: 0;
-    margin-right: 0.2rem;
+    right: 0;
   }
 
   @include media-breakpoint-down(xs) {
